# awsp

./: .gitignore  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  SUPPORT.md  skills-lock.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  security.yml
docs/: homebrew.md
handoff/: AGENTS.md  PALETTE.md  README.md  SPEC.md
handoff/reference/: AWSP CLI.html  profiles.jsx  terminal.jsx  v1-inquire.jsx  v2-ratatui.jsx  v3-skim.jsx  v4-gum.jsx  v5-status.jsx  v6-native.jsx
packaging/homebrew/: awsp-beta.rb  awsp.rb
src/: activation.rs  aws.rs  aws_config.rs  cache.rs  elevation.rs  fzf.rs  main.rs  onboarding.rs  output.rs  palette.rs  picker.rs  picker_model.rs  prompt.rs  shell.rs  shell_integration.rs  state.rs  test_support.rs
tests/config_fixtures/: sample.config
