[package]
name = "awsp"
version = "1.0.8"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Switch AWS SSO profiles across shell sessions."
homepage = "https://github.com/arseniizakharov/awsp"
repository = "https://github.com/arseniizakharov/awsp"
readme = "README.md"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.27"
fs2 = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tempfile = "3"
tungstenite = { version = "0.24", default-features = false, features = ["handshake"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
